--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,18 @@
 # Node
 node_modules/
 npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 package-lock.json
 
-# Env & secretos
+# Environment files
 .env
 .env.*
+
+# Firebase local service account keys
+firebase db/
+*.json
+
+# OS-specific
+.DS_Store
+Thumbs.db
